--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://emojiguide.com/objects/memo/📝">
     <script src="script.js" defer></script>
+
 </head>
+
 <body>
-    <h1>Etch-a-Sketch</h1>
+    <h1>Etch-a-Sketch📝</h1>
     <div class="container"></div>
 </body>
+
 </html>
