--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://emojiguide.com/objects/memo/📝">
+    <link rel="icon" href="imgs/224-2244150_pen-and-paper-emoji-hd-png-download.png">
     <script src="script.js" defer></script>
 
 </head>
 
 <body>
     <h1>Etch-a-Sketch📝</h1>
-    <div class="container"></div>
+    <div class="content">
+        <div class="container"></div>
+        <div class="right">
+            <button class="btn">Change Grid</button>
+        </div>
+    </div>
 </body>
 
 </html>
