Add color picker

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div class="content">
         <div class="container"></div>
         <div class="right">
-            <button class="btn">Change Grid</button>
+            <button id="change-grid" class="btn">Change Grid</button>
+            <form class="picker">
+                <label for="color-picker">Color:</label>
+                <input type="color" value="#000000" id="color-picker" class="btn"/>
+            </form>
         </div>
     </div>
 </body>
